--- a/templates/group.html
+++ b/templates/group.html
@@ -4,9 +4,7 @@
   Записи сообщества {{ group.title }}
 {% endblock %}
 
-{% block header %}
-  {{ group.title }}
-{% endblock %}
+{% block header %}{{ group.title }}{% endblock %}
 
 {% block content %}
   <p>
@@ -18,6 +16,6 @@
     </h3>
     <p>{{all_posts.text}}</p>
     <hr>
-{% endfor %}           
+  {% endfor %}
 {% endblock %}
    
